platform/runtime/staging/import_legacy/latest/exam_integration/latest/repository_root/runtime/traces/probe.exams-curated-exam_final-v1.exams-examfinal-ft_sqrt/user.out.build.stderr
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/latest/repository_root/datasets/exercises/exams/examfinal/ft_sqrt/tests/main.c: In function 'main':
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/latest/repository_root/datasets/exercises/exams/examfinal/ft_sqrt/tests/main.c:14:15: error: implicit declaration of function 'atoi' [-Werror=implicit-function-declaration]
   14 |     int num = atoi(argv[1]);
      |               ^~~~
cc1: all warnings being treated as errors
